⚙️filter out item/command rewards separately, then join back item rewards
Took 6 minutes